5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1723_2499.log
== TEST (2019-05-09 11:40:14) 
-- CODE:
from math import *
k = int(input("Numero natural: "))
cont = 0
soma = 0 
h = 1 / (factorial(k-1))

while (k>0):
	k = k + h
   
	print(round(k,8))

-- OUTPUT:
7.00138889
7.00277778
7.00416667
7.00555556
7.00694444
7.00833333
7.00972222
7.01111111
7.0125
7.01388889
7.01527778
7.01666667
7.01805556
7.01944444
7.02083333
7.02222222
7.02361111
7.025
7.02638889
7.02777778
7.02916667
7.03055556
7.03194444
7.03333333
7.03472222
7.03611111
7.0375
7.03888889
7.04027778
7.04166667
7.04305556
7.04444444
7.04583333
7.04722222
7.04861111
7.05
7.05138889
7.05277778
7.05416667
7.05555556
7.05694444
7.05833333
7.05972222
7.06111111
7.0625
7.06388889
7.06527778
7.06666667
7.06805556
7.06944444
7.07083333
7.07222222
7.07361111
7.075
7.07638889
7.07777778
7.07916667
7.08055556
7.08194444
7.08333333
7.08472222
7.08611111
7.0875
7.08888889
7.09027778
7.09166667
7.09305556
7.09444444
7.09583333
7.09722222
7.09861111
7.1
7.10138889
7.10277778
7.10416667
7.10555556
7.10694444
7.10833333
7.10972222
7.11111111
7.1125
7.11388889
7.11527778
7.11666667
7.11805556
7.11944444
7.12083333
7.12222222
7.12361111
7.125
7.12638889
7.12777778
7.12916667
7.13055556
7.13194444
7.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:42:39) 
-- CODE:
from math import *
k = int(input("Numero natural: "))
cont = 0
soma = 0 
h = 1 / (factorial(k-1))

while (k>0):
	k = k + h
   h = h + 1
	print(round(k,8))

-- ERROR:
File "XXXX", line 9
    h = h + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:42:55) 
-- CODE:
from math import *
k = int(input("Numero natural: "))
cont = 0
soma = 0 
h = 1 / (factorial(k-1))

while (k>0):
	k = k + 1
   h = h + 1
	print(round(k,8))

-- ERROR:
File "XXXX", line 9
    h = h + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:43:00) 
-- CODE:
from math import *
k = int(input("Numero natural: "))
cont = 0
soma = 0 
h = 1 / (factorial(k-1))

while (k>0):
	k = k + 1

	print(round(k,8))

-- OUTPUT:
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
278
279
280
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:29) 
-- CODE:
from math import *
k = int(input("Numero natural: "))

soma = 0      #acumuladora
i = 0         #contadora
fim = k - 1


while (i <= fim):
	soma = soma + 1 / factorial(i)
	i - i + 1 

print(round(soma,8))

-- OUTPUT:
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
278
279
280
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:54) 
-- CODE:
from math import *
k = int(input("Numero natural: "))

soma = 0      #acumuladora
i = 0         #contadora
fim = k - 1


while (i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1 

print(round(soma,8))

-- EXECUTION TIME:
0.567644
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:54:01) 
-- CODE:
from math import *
k = int(input("Numero natural: "))

soma = 0      #acumuladora
i = 0         #contadora
fim = k - 1


while (i <= fim):
	soma = soma + 1 / factorial(i)
	i - i + 1 

print(round(soma,8))

-- EXECUTION TIME:
441.066
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:58:51) 
-- CODE:
from math import *
k = int(input("Numero natural: "))

soma = 0      #acumuladora
i = 0         #contadora
fim = k - 1


while (i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1 

print(round(soma,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 20:58:59) 
-- CODE:
from math import *
k = int(input("Numero natural: "))

soma = 0      #acumuladora
i = 0         #contadora
fim = k - 1


while (i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1 

print(round(soma,8))

-- EXECUTION TIME:
0.22829
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:44:07) 
-- CODE:
k = int(input("Digite um numero: "))
i = 0
soma = 0 
while (i < k):
	i = i + 1 
	soma = soma + (1 / factorial (2 * i + 1))
	print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + (1 / factorial (2 * i + 1))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:44:24) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
while (i < k):
	i = i + 1 
	soma = soma + (1 / factorial (2 * i + 1))
	print(round(soma,8))
-- OUTPUT:
0.16666667
0.175
0.17519841
0.17520117
0.17520119
0.17520119
0.17520119
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:45:22) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
while (i > k):
	i = i + 1 
	soma = soma + (1 / factorial (2 * i + 1))
	print(round(soma,8))
-- OUTPUT:
0.16666667
0.175
0.17519841
0.17520117
0.17520119
0.17520119
0.17520119
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:45:31) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
while (i > k):
	i = i + 1 
	soma = soma + (1 / factorial (2 * i + 1))
print(round(soma,8))
-- OUTPUT:
0.16666667
0.175
0.17519841
0.17520117
0.17520119
0.17520119
0.17520119
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:48:13) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ):
	i = i + 1 
	soma = soma + (1 / factorial (2 * i + 1))
print(round(soma,8))
-- OUTPUT:
0.17520119
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:48:33) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ):
	i = i + 1 
	soma = soma + 1 / factorial (i)
print(round(soma,8))
-- OUTPUT:
1.71827877
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:49:09) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ): 
	soma = soma + 1 / factorial (i)
	 i = i + 1 
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:49:19) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:49:29) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:49:36) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:49:39) 
-- CODE:
from math import *
k = int(input("Digite um numero: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- EXECUTION TIME:
0.136002
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:50:23) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:50:25) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))
i = 0
soma = 0 
fim = k - 1
while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- EXECUTION TIME:
0.189978
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:51:05) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))

i = 0
soma = 0 
fim = k - 1

while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:51:16) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))

i = 0
soma = 0 
fim = k - 1

while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- EXECUTION TIME:
0.158653
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:51:44) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))

soma = 0 
i = 0
fim = k - 1

while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:51:47) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))

soma = 0 
i = 0
fim = k - 1

while (i <= k ): 
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- EXECUTION TIME:
0.121057
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:52:07) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))

soma = 0 
i = 0
fim = k - 1

while (i <= fim
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- EXECUTION TIME:
0.133614
-- ERROR:
  File "/home/codebench/codes/1723/2499/main.py", line 9
    soma = soma + 1 / factorial (i)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:52:12) 
-- CODE:
from math import *
k = int(input("Digite um numero natural: "))

soma = 0 
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + 1 / factorial (i)
	i = i + 1 
print(round(soma,8))
-- EXECUTION TIME:
0.144955
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
